# kero3d

./: CLAUDE.md  Dockerfile  README.md  docker-compose.yml
.github/workflows/: deploy.yml
src/: index.html  package.json  pnpm-lock.yaml  vite.config.js
src/kero_bevy/: Cargo.toml
src/kero_bevy/src/: lib.rs
src/public/assets/models/: idle.glb  jump.glb  running.glb
src/public/models/: character.glb  jump.glb  punching.glb  walk.glb
src/src/: main.ts  style.css
