[package]
name = "kero_bevy"
version = "0.1.0"
edition = "2021"
authors = ["Takuma"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = { version = "0.14", default-features = true, features = ["mp3"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["console"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
uuid = { version = "1", features = ["v4", "js"] }
console_error_panic_hook = "0.1.7"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
